k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopsphere-frontend
  namespace: shopsphere
spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopsphere-frontend

  template:
    metadata:
      labels:
        app: shopsphere-frontend

    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: shopsphere-frontend

          image: sameer340314/shopsphere-frontend:d83275c

          imagePullPolicy: Always

          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
