k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopsphere-backend
  namespace: shopsphere
spec:
  selector:
    app: shopsphere-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
