k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopsphere-frontend
  namespace: shopsphere
spec:
  type: NodePort

  selector:
    app: shopsphere-frontend

  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30976
      protocol: TCP
