k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shopsphere-backend-network-policy
  namespace: shopsphere

spec:
  podSelector:
    matchLabels:
      app: shopsphere-backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: shopsphere-frontend

      ports:
        - protocol: TCP
          port: 8000
